fixed FIXED footer problem covering the content

--- a/css/style.css
+++ b/css/style.css
@@ -111,14 +111,20 @@ li {
 footer {
     background-color: #E4EBF2;
     width: 100%;
-    height: 4rem;
+    height: 3.5rem;
     position: fixed;
-    left: 0;
-    bottom: 0;
-    
+    left: 0px;
+    bottom: 0px;
+    clear:both;
+}
+section {
+    clear: both;
+    width: 100%;
+    height: 60px;
 }
 @media (min-width: 600px) {
     footer { display: none;}
+    section { display: none;}
 }
 
 .footer-button {
@@ -143,8 +149,8 @@ footer {
 #copyright-text {
     width: 90%;
     height: auto;
-    padding: 5%;
     font-size: 2vw;
-    padding-bottom: 5vw;
+    padding: 3%;
+    margin-bottom: 2vw;
 }
 
